# cpsc-599

./: .gitignore  .gitmodules  README.md  bibliography-notes.txt  report01.txt  report02.txt  report03.txt  report04.txt  report05.txt  report06.txt  study_plan.txt
glow/: CMakeLists.txt  README
glow/libnoise/include/module/: const.h
glow/libnoisesrc-1.0.0/noise/: CMakeLists.txt
glow/libnoisesrc-1.0.0/noise/include/module/: const.h  modulebase.h
glow/modules/: FindCajun.cmake  FindLibunwind.cmake  FindPythonDev.cmake
glow/noiseutils/: noiseutils.cpp  noiseutils.h
glow/pyglow/: test.py
glow/scenes/: 38.json  39.json  coral.json  mars-lite.json  mars.json  mr2.json  mud.json  scene3_sin.json  wtf.json
glow/src/: ambient_occluder_light.cpp  ambient_occluder_light.h  background_sampler.h  camera.cpp  camera.h  camera_macros.h  color.h  constant_shader.h  direction_light.h  factory.cpp  factory.h  float_compare.cpp  float_compare.h  function.cpp  function.h  geometry.cpp  geometry.h  hit_record.h  json_helpers.h  light.h  linear_gradient_background.h  loader.cpp  loader.h  log_msg.cpp  log_msg.h  main.cpp  material.h  material_function.cpp  material_function.h  material_gradient.h  matte.cpp  matte.h  memento.cpp  memento.h  noise_factory.cpp  noise_factory.h  object.cpp  object.h  orthogonal_camera.cpp  orthogonal_camera.h  (+30 more)
libnoisesrc-1.0.0/noise/: CMakeLists.txt
research/: qsci.py
research/boost-python/tutorial/: Jamroot  user-config.jam
research/bottle/: bottle.py
research/flask/: fhello.py  plot.py
ui/: glow-srv.py  launch-osx.sh  libglow.dylib
ui/assets/: glow.html
ui/assets/css/: dock-manager.css  glow.css  jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.min.css  jsoneditor.css  splitter.css
ui/assets/images/: glow.psd
ui/assets/js/: dockspawn.js  glowClient.js  glowDock.js  glowEditor.js  glowEvents.js  glowFile.js  glowMain.js  glowNoiseTree.js  glowObserver.js  glowRender.js  glowStatus.js  glowTools.js  jquery.resize.js  jquery.tiles.js  main.js  splitter.js
ui/assets/scenes/: default.json
